Notifaction uchun delete qoshildi

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="icon" type="image/svg+xml" href="/logo.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Feliza Dashboard</title>
-  <!-- Google tag (gtag.js) -->
+  <!-- Google tag (gtag.js)
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-9EZXB1FDBG"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
@@ -14,7 +14,7 @@
     gtag('js', new Date());
 
     gtag('config', 'G-9EZXB1FDBG');
-  </script>
+  </script> -->
 </head>
 
 <body>
